force-app/main/default/objects/Blackhawk_Card_Product__c/Blackhawk_Card_Product__c.object-meta.xml
<CustomObject>
    <description>The Hawk Marketplace Rewards Catalog Processing API allows you to access the catalog of card products that have been made available for you to order.

The card catalog is specifically configured to your sub-organization and client programs in the Hawk Marketplace platform. It is not a global catalog of all products available from Blackhawk Network. If you do not see a product you believe should be available for you to order, or you would like to add a new product to your catalog, reach out to your Account Manager.</description>
    <label>Blackhawk Catalog</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blackhawk Catalog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>