force-app/main/default/objects/Blackhawk_Card_Product__c/fields/Client_Program_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Program_Id__c</fullName>
    <description>clientProgramId</description>
    <label>Client Program Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>