force-app/main/default/objects/Blackhawk_Card_Product__c/fields/Content_Provider_Code__c.field-meta.xml
<CustomField>
    <fullName>Content_Provider_Code__c</fullName>
    <externalId>true</externalId>
    <label>Content Provider Code</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>