force-app/main/default/objects/Blackhawk_Card_Product__c/fields/Logo_Image__c.field-meta.xml
<CustomField>
    <fullName>Logo_Image__c</fullName>
    <label>Logo Image</label>
    <type>Url</type>
</CustomField>