force-app/main/default/objects/Blackhawk_Card_Product__c/fields/Parent_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Brand_Name__c</fullName>
    <label>Parent Brand Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>