force-app/main/default/objects/Blackhawk_Card_Product__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <description>programName</description>
    <label>Program Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>