force-app/main/default/objects/Blackhawk_Card_Product__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <description>programType</description>
    <label>Program Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>