force-app/main/default/objects/Blackhawk_Card_Product__c/fields/Redemption_Info__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Info__c</fullName>
    <label>Redemption Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>