force-app/main/default/objects/Blackhawk_Card_Product__c/fields/TNC_Text__c.field-meta.xml
<CustomField>
    <fullName>TNC_Text__c</fullName>
    <label>Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>