force-app/main/default/objects/Blackhawk_Card_Product__c/fields/TNC_Type__c.field-meta.xml
<CustomField>
    <fullName>TNC_Type__c</fullName>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>