force-app/main/default/objects/Blackhawk_Card_Product__c/fields/VR_Maximum__c.field-meta.xml
<CustomField>
    <fullName>VR_Maximum__c</fullName>
    <label>Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>