force-app/main/default/objects/Blackhawk_Card_Product__c/fields/VR_Minimum__c.field-meta.xml
<CustomField>
    <fullName>VR_Minimum__c</fullName>
    <label>Minimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>